# peakrdl-sv

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  simple8.rdl  sourceme
.github/: pull_request_template.md
.github/workflows/: linting.yml  regressions.yml  type_checking.yml
src/peakrdl_sv/: __peakrdl__.py  callbacks.py  exporter.py  listener.py  main.py  node.py  reg_map.py.mako  reg_pkg.sv.mako  reg_pkg.sv.tpl  reg_top.sv.mako  reg_top.sv.tpl  reg_top_axil.sv.tpl  regmodel.py
src/peakrdl_sv/data/: rdl_axil_to_csr.sv  rdl_axil_to_reg.sv  rdl_subreg.sv
tests/directed/simple8/: Makefile  simple8.rdl  simple8.vlt
tests/directed/simple8/rtl/: rdl_subreg_arb.sv  simple8_reg_pkg.sv  simple8_reg_top.sv
tests/regressions/: Makefile  addrmap.rdl  test.py  test_my_reg_top.py  testbench.py
tests/regressions_axil/: test.py  test_axil_reg.py  test_reg.py  testbench.py
tests/test_wide_regs/: Makefile  addrmap.rdl  test.py  testbench.py
